<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="fill_vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:rowCount="13"
    tools:context=".MainActivity" >
    
    
    
    <TextView  android:layout_row="6"/>
    <TextView  android:layout_row="10"/>

    <Button
        android:id="@+id/buttonPower"
        style="@style/ButtonText"
        android:layout_width="wrap_content"
        android:layout_column="3"
        android:layout_gravity="start"
        android:layout_row="0"
        android:background="@drawable/button_black"
        android:onClick="sendIR"
        android:text="@string/button_power" />

    <Button
        android:id="@+id/buttonRed"
        style="@style/ButtonText"
        android:layout_width="wrap_content"
        android:layout_column="0"
        android:layout_gravity="start"
        android:layout_row="1"
        android:background="@drawable/button_red"
        android:onClick="sendIR"
        android:text="@string/button_empty" />

    <Button
        android:id="@+id/buttonGreen"
        style="@style/ButtonText"
        android:layout_width="wrap_content"
        android:layout_column="1"
        android:layout_gravity="start"
        android:layout_row="1"
        android:background="@drawable/button_green"
        android:onClick="sendIR"
        android:text="@string/button_empty" />

    <Button
        android:id="@+id/buttonWhite"
        style="@style/ButtonText"
        android:layout_width="wrap_content"
        android:layout_column="3"
        android:layout_gravity="start"
        android:layout_row="1"
        android:background="@drawable/button_white"
        android:onClick="sendIR"
        android:text="@string/button_empty" />

    <Button
        android:id="@+id/buttonPlayPause"
        style="@style/ButtonText"
        android:layout_width="wrap_content"
        android:layout_column="2"
        android:layout_gravity="start"
        android:layout_row="0"
        android:background="@drawable/button_black"
        android:onClick="sendIR"
        android:text="@string/button_play" />

    <Button
        android:id="@+id/buttonBrightnessUp"
        style="@style/ButtonText"
        android:layout_width="wrap_content"
        android:layout_column="0"
        android:layout_gravity="left|start|top"
        android:layout_row="0"
        android:background="@drawable/button_black"
        android:onClick="sendIR"
        android:text="@string/button_brightness_up" />

    <Button
        android:id="@+id/buttonBrightnessDown"
        style="@style/ButtonText"
        android:layout_width="wrap_content"
        android:layout_column="1"
        android:layout_gravity="start"
        android:layout_row="0"
        android:background="@drawable/button_black"
        android:onClick="sendIR"
        android:text="@string/button_brightness_down" />

    <Button
        android:id="@+id/buttonMaroon"
        style="@style/ButtonText"
        android:layout_width="wrap_content"
        android:layout_column="0"
        android:layout_gravity="start"
        android:layout_row="2"
        android:background="@drawable/button_maroon"
        android:onClick="sendIR"
        android:text="@string/button_empty" />

    <Button
        android:id="@+id/buttonOrange"
        style="@style/ButtonText"
        android:layout_width="wrap_content"
        android:layout_column="0"
        android:layout_gravity="start"
        android:layout_row="3"
        android:background="@drawable/button_orange"
        android:onClick="sendIR"
        android:text="@string/button_empty" />

    <Button
        android:id="@+id/buttonYellow"
        style="@style/ButtonText"
        android:layout_width="wrap_content"
        android:layout_column="0"
        android:layout_gravity="start"
        android:layout_row="4"
        android:background="@drawable/button_yellow"
        android:onClick="sendIR"
        android:text="@string/button_empty" />

    <Button
        android:id="@+id/buttonGold"
        style="@style/ButtonText"
        android:layout_width="wrap_content"
        android:layout_column="0"
        android:layout_gravity="start"
        android:layout_row="5"
        android:background="@drawable/button_gold"
        android:onClick="sendIR"
        android:text="@string/button_empty" />

    <Button
        android:id="@+id/buttonLightGreen"
        style="@style/ButtonText"
        android:layout_width="wrap_content"
        android:layout_column="1"
        android:layout_gravity="start"
        android:layout_row="2"
        android:background="@drawable/button_light_green"
        android:onClick="sendIR"
        android:text="@string/button_empty" />

    <Button
        android:id="@+id/buttonLightBlue"
        style="@style/ButtonText"
        android:layout_width="wrap_content"
        android:layout_column="1"
        android:layout_gravity="start"
        android:layout_row="3"
        android:background="@drawable/button_light_blue"
        android:onClick="sendIR"
        android:text="@string/button_empty" />

    <Button
        android:id="@+id/buttonTeal"
        style="@style/ButtonText"
        android:layout_width="wrap_content"
        android:layout_column="1"
        android:layout_gravity="start"
        android:layout_row="4"
        android:background="@drawable/button_teal"
        android:onClick="sendIR"
        android:text="@string/button_empty" />

    <Button
        android:id="@+id/buttonTurquoise"
        style="@style/ButtonText"
        android:layout_width="wrap_content"
        android:layout_column="1"
        android:layout_gravity="start"
        android:layout_row="5"
        android:background="@drawable/button_turquoise"
        android:onClick="sendIR"
        android:text="@string/button_empty" />

    <Button
        android:id="@+id/buttonDarkBlue"
        style="@style/ButtonText"
        android:layout_width="wrap_content"
        android:layout_column="2"
        android:layout_gravity="start"
        android:layout_row="2"
        android:background="@drawable/button_dark_blue"
        android:onClick="sendIR"
        android:text="@string/button_empty" />

    <Button
        android:id="@+id/buttonBlack"
        style="@style/ButtonText"
        android:layout_width="wrap_content"
        android:layout_column="2"
        android:layout_gravity="start"
        android:layout_row="3"
        android:background="@drawable/button_black"
        android:onClick="sendIR"
        android:text="@string/button_empty" />

    <Button
        android:id="@+id/buttonPurple"
        style="@style/ButtonText"
        android:layout_width="wrap_content"
        android:layout_column="2"
        android:layout_gravity="start"
        android:layout_row="4"
        android:background="@drawable/button_purple"
        android:onClick="sendIR"
        android:text="@string/button_empty" />

    <Button
        android:id="@+id/buttonViolet"
        style="@style/ButtonText"
        android:layout_width="wrap_content"
        android:layout_column="2"
        android:layout_gravity="start"
        android:layout_row="5"
        android:background="@drawable/button_violet"
        android:onClick="sendIR"
        android:text="@string/button_empty" />

    <Button
        android:id="@+id/buttonPink"
        style="@style/ButtonText"
        android:layout_width="wrap_content"
        android:layout_column="3"
        android:layout_gravity="start"
        android:layout_row="2"
        android:background="@drawable/button_pink"
        android:onClick="sendIR"
        android:text="@string/button_empty" />

    <Button
        android:id="@+id/buttonLightPink"
        style="@style/ButtonText"
        android:layout_width="wrap_content"
        android:layout_column="3"
        android:layout_gravity="start"
        android:layout_row="3"
        android:background="@drawable/button_light_pink"
        android:onClick="sendIR"
        android:text="@string/button_empty" />

    <Button
        android:id="@+id/buttonSkyBlue"
        style="@style/ButtonText"
        android:layout_width="wrap_content"
        android:layout_column="3"
        android:layout_gravity="start"
        android:layout_row="4"
        android:background="@drawable/button_sky_blue"
        android:onClick="sendIR"
        android:text="@string/button_empty" />

    <Button
        android:id="@+id/buttonWhiteBlue"
        style="@style/ButtonText"
        android:layout_width="wrap_content"
        android:layout_column="3"
        android:layout_gravity="start"
        android:layout_row="5"
        android:background="@drawable/button_white_blue"
        android:onClick="sendIR"
        android:text="@string/button_empty" />

    <Button
        android:id="@+id/buttonRedUp"
        style="@style/ButtonText"
        android:layout_width="wrap_content"
        android:layout_column="0"
        android:layout_gravity="start"
        android:layout_row="7"
        android:background="@drawable/button_red"
        android:onClick="sendIR"
        android:text="@string/button_up" />

    <Button
        android:id="@+id/buttonRedDown"
        style="@style/ButtonText"
        android:layout_width="wrap_content"
        android:layout_column="0"
        android:layout_gravity="start"
        android:layout_row="8"
        android:background="@drawable/button_red"
        android:onClick="sendIR"
        android:text="@string/button_down" />

    <Button
        android:id="@+id/buttonDIY1"
        style="@style/ButtonText"
        android:layout_width="wrap_content"
        android:layout_column="3"
        android:layout_gravity="start"
        android:layout_row="7"
        android:background="@drawable/button_black"
        android:onClick="sendIR"
        android:text="@string/button_DIY_1" />

    <Button
        android:id="@+id/buttonDIY4"
        style="@style/ButtonText"
        android:layout_width="wrap_content"
        android:layout_column="1"
        android:layout_gravity="start"
        android:layout_row="9"
        android:background="@drawable/button_black"
        android:onClick="sendIR"
        android:text="@string/button_DIY_4" />

    <Button
        android:id="@+id/buttonGreenUp"
        style="@style/ButtonText"
        android:layout_width="wrap_content"
        android:layout_column="1"
        android:layout_gravity="start"
        android:layout_row="7"
        android:background="@drawable/button_green"
        android:onClick="sendIR"
        android:text="@string/button_up" />

    <Button
        android:id="@+id/buttonGreenDown"
        style="@style/ButtonText"
        android:layout_width="wrap_content"
        android:layout_column="1"
        android:layout_gravity="start"
        android:layout_row="8"
        android:background="@drawable/button_green"
        android:onClick="sendIR"
        android:text="@string/button_down" />

    <Button
        android:id="@+id/buttonDIY2"
        style="@style/ButtonText"
        android:layout_width="wrap_content"
        android:layout_column="3"
        android:layout_gravity="start"
        android:layout_row="8"
        android:background="@drawable/button_black"
        android:onClick="sendIR"
        android:text="@string/button_DIY_2" />

    <Button
        android:id="@+id/buttonDIY5"
        style="@style/ButtonText"
        android:layout_width="wrap_content"
        android:layout_column="2"
        android:layout_gravity="start"
        android:layout_row="9"
        android:background="@drawable/button_black"
        android:onClick="sendIR"
        android:text="@string/button_DIY_5" />

    <Button
        android:id="@+id/buttonBlueUp"
        style="@style/ButtonText"
        android:layout_width="wrap_content"
        android:layout_column="2"
        android:layout_gravity="start"
        android:layout_row="7"
        android:background="@drawable/blue_button"
        android:onClick="sendIR"
        android:text="@string/button_up" />

    <Button
        android:id="@+id/buttonBlueDown"
        style="@style/ButtonText"
        android:layout_width="wrap_content"
        android:layout_column="2"
        android:layout_gravity="start"
        android:layout_row="8"
        android:background="@drawable/blue_button"
        android:onClick="sendIR"
        android:text="@string/button_down" />

    <Button
        android:id="@+id/buttonDIY3"
        style="@style/ButtonText"
        android:layout_width="wrap_content"
        android:layout_column="0"
        android:layout_gravity="start"
        android:layout_row="9"
        android:background="@drawable/button_black"
        android:onClick="sendIR"
        android:text="@string/button_DIY_3" />

    <Button
        android:id="@+id/buttonDIY6"
        style="@style/ButtonText"
        android:layout_width="wrap_content"
        android:layout_column="3"
        android:layout_gravity="start"
        android:layout_row="9"
        android:background="@drawable/button_black"
        android:onClick="sendIR"
        android:text="@string/button_DIY_6" />

    <Button
        android:id="@+id/buttonBlue"
        style="@style/ButtonText"
        android:layout_width="wrap_content"
        android:layout_column="2"
        android:layout_gravity="start"
        android:layout_row="1"
        android:background="@drawable/blue_button"
        android:onClick="sendIR"
        android:text="@string/button_empty" />

    <Button
        android:id="@+id/buttonQuick"
        style="@style/ButtonText"
        android:layout_width="wrap_content"
        android:layout_column="3"
        android:layout_gravity="start"
        android:layout_row="11"
        android:background="@drawable/button_black"
        android:onClick="sendIR"
        android:text="@string/button_quick" />

    <Button
        android:id="@+id/buttonSlow"
        style="@style/ButtonText"
        android:layout_width="wrap_content"
        android:layout_column="3"
        android:layout_gravity="start"
        android:layout_row="12"
        android:background="@drawable/button_black"
        android:onClick="sendIR"
        android:text="@string/button_slow" />

    <Button
        android:id="@+id/buttonAuto"
        style="@style/ButtonText"
        android:layout_width="wrap_content"
        android:layout_column="2"
        android:layout_gravity="start"
        android:layout_row="12"
        android:background="@drawable/button_black"
        android:onClick="sendIR"
        android:text="@string/button_auto" />

    <Button
        android:id="@+id/buttonFlash"
        style="@style/ButtonText"
        android:layout_width="wrap_content"
        android:layout_column="2"
        android:layout_gravity="start"
        android:layout_row="11"
        android:background="@drawable/button_black"
        android:onClick="sendIR"
        android:text="@string/button_flash" />

    <Button
        android:id="@+id/buttonFade7"
        style="@style/ButtonText"
        android:layout_width="wrap_content"
        android:layout_column="0"
        android:layout_gravity="start"
        android:layout_row="12"
        android:background="@drawable/button_black"
        android:onClick="sendIR"
        android:text="@string/button_fade_7" />

    <Button
        android:id="@+id/buttonJump3"
        style="@style/ButtonText"
        android:layout_width="wrap_content"
        android:layout_column="1"
        android:layout_gravity="start"
        android:layout_row="11"
        android:background="@drawable/button_black"
        android:onClick="sendIR"
        android:text="@string/button_jump_3" />

    <Button
        android:id="@+id/buttonJump7"
        style="@style/ButtonText"
        android:layout_width="wrap_content"
        android:layout_column="1"
        android:layout_gravity="start"
        android:layout_row="12"
        android:background="@drawable/button_black"
        android:onClick="sendIR"
        android:text="@string/button_jump_7" />

    <Button
        android:id="@+id/buttonFade3"
        style="@style/ButtonText"
        android:layout_width="wrap_content"
        android:layout_column="0"
        android:layout_gravity="start"
        android:layout_row="11"
        android:background="@drawable/button_black"
        android:onClick="sendIR"
        android:text="@string/button_fade_3" />

</GridLayout>